--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongoose": "^7.6.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "string-similarity": "^4.0.4"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
   }
 }
-
