--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.6.1",
     "multer": "^1.4.5-lts.1",
-    "string-similarity": "^4.0.4"
+    "string-similarity": "^4.0.4",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
