--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: scale-car-collection-backend
     runtime: node
     plan: free
-    buildCommand: "npm install"
+    buildCommand: "npm install --legacy-peer-deps"
     startCommand: "node src/index.js"
     envVars:
       - key: NODE_VERSION
